--- a/src/recipe.module.css
+++ b/src/recipe.module.css
@@ -1,30 +1,29 @@
-.recipe{
+.recipe {
     border-radius: 10px;
-    box-shadow: 0px 5px 20px  red;
+    box-shadow: 0px 5px 20px #fcf484;
     margin: 20px;
+    width: 40%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    background: white;
+    background: rgb(255, 255, 255);
     align-items: center;
-    min-width: 40%;
 }
 
-.image{
+.image {
     border-radius: 50%;
     width: 100px;
     height: 100px;
 }
 
-.ingredients{
-    font-family: "Lucida Console", Courier, monospace;
+.ingredients {
     color: rgb(13, 83, 145);
 }
 
-.title{
-    color: rgb(243, 64, 243);
+.title {
+    color: rgb(13, 83, 145);
 }
 
-.calories{
-    color: rgb(243, 64, 243);
+.calories {
+    color: rgb(13, 83, 145);
 }
